Uses align-self stretch to fix height of links div

--- a/resources/scss/screen.scss
+++ b/resources/scss/screen.scss
@@ -31,7 +31,7 @@ input[type="submit"], button {
     border-color: #AAA;
   }
   &:active {
-    border: 0;
+    border: none;
   }
 }
 
@@ -62,6 +62,7 @@ input[type="submit"], button {
   flex-flow: column wrap;
   -webkit-justify-content: center;
   justify-content: center;
+  align-self: stretch;
 }
 
 header {
@@ -110,14 +111,9 @@ header {
       width: 100%;
     }
   }
-  .description {
-    border-left: 1px solid $green;
-    @media screen and (max-width: 700px) {
-      border-left: 0;
-    }
-  }
   .links {
     border-top: 0;
+    border-right: 1px solid $green;
     border-bottom: 0;
     border-left: 0;
     div:first-child {
